Fix container align of speaker single.

--- a/source/assets/stylesheets/_components.speaker.scss
+++ b/source/assets/stylesheets/_components.speaker.scss
@@ -23,12 +23,11 @@
   }
 
   .entry-content {
+    @include container-center();
 
-    @include breakpoint(small) {
+    padding-left: $container-unit-small;
+    padding-right: $container-unit-small;
 
-      padding-left: rem(120);
-
-    }
 
     p {
 
@@ -50,9 +49,9 @@
     margin: rem(8) rem(16) rem(8) 0;
 
     img {
-      -webkit-border-radius: 50%; 
-      -moz-border-radius: 50%; 
-      border-radius: 50%; 
+      -webkit-border-radius: 50%;
+      -moz-border-radius: 50%;
+      border-radius: 50%;
       border:4px solid $color-brand-primary;
       margin: 0;
 
